--- a/mandelbrot.vcxproj.filters
+++ b/mandelbrot.vcxproj.filters
@@ -17,7 +17,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
-    <ClInclude Include="FractalAlgorithms.h" />
+    <ClInclude Include="inc\amp_rand_collection.h" />
+    <ClInclude Include="inc\amp_tinymt_rng.h" />
+    <ClInclude Include="inc\xxamp_tinymt_precalc_dc.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="Assets\LockScreenLogo.scale-200.png">
